--- a/r4babs1/week-9/study_before_workshop.qmd
+++ b/r4babs1/week-9/study_before_workshop.qmd
@@ -4,7 +4,6 @@ title: "Independent Study - before the workshop"
 
 1.  Prepare
 
-    i.  📖 Read [Ideas about data](https://3mmarand.github.io/comp4biosci/ideas_about_data.html)
-    ii.  📖 Read [Working with data in RStudio](https://3mmarand.github.io/comp4biosci/working_with_data_rstudio.html)
+    i.  📖 Read [Working with data in RStudio](https://3mmarand.github.io/comp4biosci/working_with_data_rstudio.html)
 
 
